RbA Build/src/objects/Municipality_Match__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Municipalities Match</relationshipLabel>
        <relationshipName>Municipalities_Match</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City_Township__c</fullName>
        <label>City/Township</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id,&quot;View&quot;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Municipality Match</label>
    <nameField>
        <displayFormat>MM-{00}</displayFormat>
        <label>Municipality Match Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Municipalities Match</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>